[build-system]
requires = [
    "setuptools >= 70.1.0",
    "wheel>=0.43.0",
    "build>=1.2.1",
    "twine>=5.1.0",
    "textual-dev>=1.5.1",
    "textual-serve==1.0.3",
    "pytz==2024.1"
]
build-backend = "setuptools.build_meta"
[project]
name = "SuricataLog"
version = "1.0.3"
authors = [
    {name = "Jose Vicente Nunez", email = "kodegeek.com@protonmail.com"},
]
maintainers = [
    {name = "Jose Vicente Nunez", email = "kodegeek.com@protonmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]
dynamic = ["dependencies"]
description = "Scripts to display contents of Suricata eve.json log"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["suricata", "log", "eve"]
[project.urls]
Repository = "https://github.com/josevnz/SuricataLog"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"suricatalog" = ["css/*.tcss"]

[project.scripts]
eve_json = "suricatalog.scripts.eve_json:main"
eve_log = "suricatalog.scripts.eve_log:main"
eve_server = "suricatalog.scripts.eve_server:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
