[metadata]
author = Jose Vicente Nunez
author_email = kodegeek.com@protonmail.com
name = SuricataLog
version = 0.0.7
description = Scripts to display contents of Suricata eve.json log
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josevnz/SuricataLog

[options]
packages = suricatalog
setup_requires =
    build
    setuptools
    twine
    pip
install_requires =
    importlib; python_version == "3.9"
    rich
    textual==0.1.18
scripts =
    scripts/eve_log.py
    scripts/replay_pcap_file.sh
    scripts/eve_json.py
