[metadata]
author = Jose Vicente Nunez
author_email = kodegeek.com@protonmail.com
name = SuricataLog
version = 0.0.9
description = Scripts to display contents of Suricata eve.json log
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josevnz/SuricataLog

[options]
packages =
    suricatalog
    suricatalog.ui
setup_requires =
    build
    setuptools
    twine
    pip
    textual-dev
install_requires =
    importlib
    textual==0.35.1
    rich==13.5
scripts =
    scripts/eve_log.py
    scripts/replay_pcap_file.sh
    scripts/eve_json.py
